--- a/templates/index.html
+++ b/templates/index.html
@@ -73,17 +73,17 @@
     <div class="row">
         <div class = "card col-md-12 shadow">
             <div class = "card-body">
-                <form action = "/predict" method = "get">
+                <form action = "/predict" method = "post">
                     <div class="jumbotron pt-1 pb-1 jumbotron-fluid text-center" style="display:{{display}}; background-color:{{jumbotron_bg}};">
                       <div class="container">
-                          <h1 class="display-5"> {{prediction}} </h1>
+                          <h1 class="display-5 text-light"> {{prediction}} </h1>
                       </div>
                     </div>
                     <div class="form-group">
                         <h3><label for="exampleFormControlTextarea1">Please Enter a Movie Review</label></h3>
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <textarea name="sentence" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
                     <button class="btn btn-outline-primary" type="submit">Predict</button>
                     <a href="/" class="btn btn-outline-dark">Reset</a>
