--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
                 <form action = "/predict" method = "post">
                     <div class="jumbotron pt-1 pb-1 jumbotron-fluid text-center" style="display:{{display}}; background-color:{{jumbotron_bg}};">
                       <div class="container">
-                          <h1 class="display-5 text-light"> {{prediction}} </h1>
+                          <h1 class="display-5" style="color:{{text_color}}"> {{prediction}} </h1>
                       </div>
                     </div>
                     <div class="form-group">
